# ITKTractographyTRX

./: .gitignore  .gitmodules  .readthedocs.yml  CMakeLists.txt  README.md  TractographyTRX.remote.cmake  codecov.yml  itk-module-init.cmake  itk-module.cmake  pyproject.toml
.github/workflows/: apply-clang-format.yml  build-test-cxx.yml  build-test-python.yml  ci.yml  clang-format-linter.yml
Documentation/: Benchmarks.rst  Overview.rst  api.rst  cli.rst  conf.py  examples.rst  index.rst  quickstart.rst  requirements.txt  user_guide.rst
bench/: CMakeLists.txt  bench_trx_itk_realdata.cpp  plot_bench.R  run_benchmarks.sh
bench/results/: bench_trx_itk_realdata.json
cmake/: FindEigen3.cmake  Findlibzip.cmake
examples/: CMakeLists.txt  trx_add_groups_cli.cxx  trx_extract_subset_cli.cxx  trx_group_tdi_cli.cxx  trx_info.cxx
include/: itkTrxFileReader.h  itkTrxFileWriter.h  itkTrxGroup.h  itkTrxGroupTdiMapper.h  itkTrxParcellationLabeler.h  itkTrxStreamWriter.h  itkTrxStreamlineData.h  itkTrxStreamlineData.hxx  itkTrxStreamlineIO.h  itkTrxStreamlineIOBase.h  itkTrxStreamlineIOFactory.h
src/: CMakeLists.txt  itkTrxFileReader.cxx  itkTrxFileWriter.cxx  itkTrxGroup.cxx  itkTrxGroupTdiMapper.cxx  itkTrxParcellationLabeler.cxx  itkTrxStreamWriter.cxx  itkTrxStreamlineData.cxx  itkTrxStreamlineIO.cxx  itkTrxStreamlineIOBase.cxx  itkTrxStreamlineIOFactory.cxx
test/: CMakeLists.txt  itkTrxCoverageTest.cxx  itkTrxGoldStandardTest.cxx  itkTrxGroupTdiMapperTest.cxx  itkTrxGroupTest.cxx  itkTrxParcellationLabelingTest.cxx  itkTrxReadWriteTest.cxx  itkTrxWrapperTest.cxx
test/Baseline/: README.md
test/Input/: README.md
wrapping/: CMakeLists.txt  itkTrxFileReader.wrap  itkTrxFileWriter.wrap  itkTrxGroup.wrap  itkTrxGroupTdiMapper.wrap  itkTrxParcellationLabeler.wrap  itkTrxStreamWriter.wrap  itkTrxStreamlineData.wrap  itkTrxTransformBridge.wrap
