[build-system]
requires = ["scikit-build-core"]
build-backend = "scikit_build_core.build"

[project]
name = "itk-tractographytrx"
version = "0.1.0"
description = "ITK remote module for TRX tractography file format support."
readme = "README.md"
license = {file = "LICENSE"}
keywords = [
    "itk",
    "InsightToolkit",
    "tractography",
    "trx",
    "diffusion-mri",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Healthcare Industry",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Programming Language :: C++",
    "Programming Language :: Python",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Topic :: Software Development :: Libraries",
]
requires-python = ">=3.9"
dependencies = [
    "itk-core == 5.4.*",
]

[project.urls]
Download = "https://github.com/tee-ar-ex/ITKTractographyTRX"
Homepage = "https://github.com/tee-ar-ex/ITKTractographyTRX"

[tool.scikit-build]
cmake.version = ">=3.22.1"
cmake.args = []
cmake.define = {}
cmake.verbose = true
cmake.build-type = "Release"
cmake.source-dir = "."
ninja.version = ">=1.11"
logging.level = "INFO"
sdist.include = []
sdist.exclude = []
wheel.license-files = ["LICEN[CS]E*"]
wheel.platlib = "false"
backport.find-python = "3.26.1"
editable.mode = "redirect"
editable.rebuild = false
minimum-version = "0.8.2"
build-dir = "build/{wheel_tag}"
